[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taskiq-beat"
dynamic = ["version"]
description = "A database-backed scheduler and beat engine for Taskiq."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "xlartas" },
]
urls = { Homepage = "https://github.com/Artasov/taskiq-beat", Repository = "https://github.com/Artasov/taskiq-beat", Issues = "https://github.com/Artasov/taskiq-beat/issues" }
keywords = [
    "taskiq",
    "beat",
    "scheduler",
    "cron",
    "crontab",
    "interval",
    "sqlalchemy",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "sqlalchemy>=2.0.0",
    "taskiq>=0.12.0",
]

[project.optional-dependencies]
test = [
    "aiosqlite>=0.20.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
]
dev = [
    "aiosqlite>=0.20.0",
    "build>=1.2.2",
    "mypy>=1.11.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.11.0",
    "twine>=6.1.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "taskiq_beat._version.__version__" }

[tool.setuptools.packages.find]
namespaces = false
exclude = ["scripts", "scripts.*", "tests", "tests.*"]

[tool.setuptools.package-data]
taskiq_beat = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.mypy]
python_version = "3.12"
plugins = ["sqlalchemy.ext.mypy.plugin"]
packages = ["taskiq_beat"]
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
